perhaps fixed reading css for alignment

--- a/mycms/media/reading.css
+++ b/mycms/media/reading.css
@@ -9,16 +9,13 @@
 	position:absolute;
 	height:2000px;
 	width:2000px;
-}
-
-#article-title{
-    background-color:#FFFFFF
+	background-color:#ea7d3;
 }
 
 .left-text{
         background-color:#FFFFFF
 	overflow:scroll;
-	z-index:1000o;
+	z-index:1000;
 	height:700px;
 	padding-bottom:60px;
 	position: relative;
@@ -30,5 +27,6 @@
         background-color:#FFFFFF
 	padding-top:60px;
 	padding-bottom:60px;
+	z-index:1000;
 
 }
